bug fixes, light refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-# Soon To Be Deprecated #
-#########################
-/FeatureTests
-steps.txt
-
-# OS generated files #
-######################
+# OS generated files
 .DS_Store
 
-# Editor Files #
-################
-*.sublime-workspace
+# ctags
+tags
